# forecastfm

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: outcome-v2-publication-timestamp.yml
data/processed/: manifest.json
examples/: audit_nba_injury_pdf_coverage.py  build_nba_injury_archive.py  build_outcome_dataset.py  build_outcome_development_evaluation.py  build_outcome_v2_dataset.py  build_real_nba_dataset.py  build_rl_dataset.py  build_validation_canary.py  build_validation_canary_v2.py  capture_sportsdataio_nba.py  collect_prospective.py  emit_rl_forecasts.py  fetch_espn_season.py  fit_nba_rich_baseline.py  freeze_experiment.py  freeze_outcome_experiment.py  freeze_outcome_training_lock.py  freeze_training_lock.py  predict_nba_rich_baseline.py  run_evidence_bandit.py  run_gbm_ablation.py  run_kalman_diagnostic.py  run_market_benchmark.py  run_open_modern_development.py  run_private_prototype.py  run_prospective_weekly.py  run_revision_model.py  run_t15_diagnostic.py  run_tinker_canary.py  run_tinker_canary_v2.py  run_tinker_format_smoke.py  run_tinker_outcome_development.py  run_tinker_outcome_sft_local.py  run_tinker_sft_local.py  score_outcome_development.py  score_validation_canary.py  score_validation_canary_v2.py  seal_open_modern_source.py  smoke_tinker_outcome_candidates.py  tinker_outcome_inference.py  (+7 more)
prospective/: COLLECTOR.md  DATA_RIGHTS.md  OUTCOME_V2_VENDOR_REQUIREMENTS.md  PREDECLARED_2026_27_CANDIDATE.md  README.md  RL_RUN_PROTOCOL.md  SPORTRADAR_TRIAL_PLAN.md  WEEKLY_PROTOCOL.md  experiment.json  training_lock.json
tests/: __init__.py  helpers.py  test_build_outcome_v2_dataset.py  test_build_validation_canary_v2.py  test_canary.py  test_capture_sportsdataio_nba_cli.py  test_elo_residual.py  test_freeze_experiment.py  test_github_actions_receipt.py  test_integrity.py  test_ledger.py  test_local_config.py  test_models.py  test_nba_arenas.py  test_nba_bandit.py  test_nba_data.py  test_nba_elo_replay.py  test_nba_elo_state.py  test_nba_espn_scoreboard.py  test_nba_evaluation_gate.py  test_nba_evidence.py  test_nba_evidence_io.py  test_nba_feature_builder.py  test_nba_feature_rows.py  test_nba_injury_report.py  test_nba_injury_report_v1.py  test_nba_kalman.py  test_nba_market.py  test_nba_mov_elo.py  test_nba_pbp.py  test_nba_provider_conformance.py  test_nba_rapm.py  test_nba_raw_capture.py  test_nba_resolutions.py  test_nba_revision.py  test_nba_rich.py  test_nba_rich_baseline.py  test_nba_rich_baseline_cli.py  test_nba_rights_lock.py  test_nba_rl_dataset.py  (+42 more)
(+113 files in other folders)
